the usual post-merge layout cleanups

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -43,7 +43,7 @@ h2 {
 
 .shadow-box {
     //overflow: hidden;   // Forget why add this, but multiple select hide by this
-    box-shadow: 0 15px 70px rgba(0, 0, 0, 0.1);
+    // box-shadow: 0 15px 70px rgba(0, 0, 0, 0.1);
     padding: 10px;
     border-radius: 10px;
 
