--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -2,7 +2,7 @@ $primary: #5cdd8b;
 $danger: #dc3545;
 $warning: #f8a306;
 $link-color: #111;
-$border-radius: 50rem;
+$border-radius: .25rem;
 
 $highlight: #7ce8a4;
 $highlight-white: #e7faec;
